build : 네임스페이스 변경 fix : 스코어 추가